--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "i18n": "src/cli.js"
   },
   "scripts": {
-    "release": "np --yolo"
+    "release": "np --yolo",
+    "test": "mocha  --require test/test-helper.js test/**/*.spec.js"
   },
   "authors": [
     "Bret K. Ikehara <bret.k.ikehara@gmail.com>",
@@ -23,6 +24,9 @@
     "yargs": "^6.3.0"
   },
   "devDependencies": {
-    "np": "^2.12.0"
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "np": "^2.12.0",
+    "sinon": "^2.0.0"
   }
 }
