Extract adapters, many functions (major refactor)
Breaking changes in this refactor:

1. Now dependent on Node 6.X (breaks compatibility with 5.X) in favor of
   additional ES6 functionality
2. Config changes made to make usage more straightforward:
   - `type` renamed to `format` (JSON, CommonJS formats)
   - `path` and `output` consolidated as `dir`
   - `dir` does not contain the sheetname by default - you have to
     specify each project's full path

Internal changes:

1. All commands are in their own files under `commands`
2. Adapters have been created for different formats
3. Index generation has been moved (mostly) into the adapters
4. The configuration owns the adapter
5. Utility functions have been extracted to a separate file
6. API calls are in their own file (sheets)
7. The cli file has been un-binaried. The binary file is a simple run of
   the cli file.
8. General cleanup with ES6 - object de/constructing, arrow functions
   (almost) everywhere, default function arguments
9. Variable renames and other general refactoring

Why this was done:
1. The code should be much more understandable now
2. We want to be able to add other adapters (like a rails adapter)

Specifics:
- Consistent naming for "format"
- The format is the output format of this tool. js/json/...
- Make sure path is called the same everywhere
- Moved some logic into adapters
- Adapter knows about indexes
- Extracted writeFile
- Extracted toUnderscoreCase => toSnakeCase
- Extracted parseAsArray
- Extracted writeTemplate
- Removed unnecessary code
- Cleaned up auth flow
- Extracted API calls into google file
- Consolidated utils
- Moved binary into bin directory
- Extracted CSV command
- Extracted bundles command
- Extracted filterviews command
- Added Travis file for running tests
- README changes

--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "@coverhound/i18n-cli",
   "version": "2.0.0",
   "description": "i18n command line interface manager",
-  "main": "src/cli.js",
+  "main": "bin/i18n.js",
   "bin": {
-    "i18n": "src/cli.js"
-  },
+    "i18n": "bin/i18n.js" },
   "scripts": {
     "release": "np --yolo",
-    "test": "mocha  --require test/test-helper.js test/**/*.spec.js"
+    "test": "mocha  --require test/test-helper.js"
   },
   "authors": [
     "Bret K. Ikehara <bret.k.ikehara@gmail.com>",
