--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "i18n": "bin/i18n.js"
   },
   "scripts": {
-    "release": "np --yolo",
+    "release": "np",
     "test": "mocha  --require test/test-helper.js"
   },
   "authors": [
